fixing overlapping members cards

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -231,6 +231,7 @@ body > .container {
 }
 
 .members {
+  margin: 0 auto;
   margin-top: 20px;
 }
 
@@ -240,8 +241,8 @@ body > .container {
   background-color: #eeeeee;
   padding-top: 15px;
   padding-bottom: 15px;
-  width: 220px;
-  margin: 0 auto;
+  width: 200px;
+  margin: 20px 20px;
   border: 1px solid #bb335b;
 
   .member-name {
@@ -311,7 +312,7 @@ body > .container {
   background-color: #eeeeee;
   padding: 15px 25px;
   width: 220px;
-  margin: 0 auto;
+  margin: 20px 20px;
   border: 1px solid #bb335b;
 
   .project-name {
